--- a/haru-fashion/.env
+++ b/haru-fashion/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BACKEND_URL = http://localhost:4000
-NEXT_PUBLIC_PROD_BACKEND_URL = http://localhost:4000
+NEXT_PUBLIC_BACKEND_URL = https://api.lumen.com.vn
+NEXT_PUBLIC_PROD_BACKEND_URL = https://api.lumen.com.vn
 NODE_ENV = production
 NEXT_PUBLIC_PROVINCE_API = https://provinces.open-api.vn/api
