--- a/haru-fashion/package.json
+++ b/haru-fashion/package.json
@@ -13,12 +13,14 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "cookies-next": "^2.0.4",
+    "lucide-react": "^0.514.0",
     "next": "^12.1.0",
     "next-intl": "^2.4.0",
     "next-pwa": "^5.4.4",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-toastify": "^9.1.3",
     "swiper": "^6.6.2"
